--- a/oa-PC/package.json
+++ b/oa-PC/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
+    "af-table-column": "^1.0.3",
     "axios": "^0.27.2",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.11",
