--- a/oa-server/pom.xml
+++ b/oa-server/pom.xml
@@ -32,6 +32,10 @@
             <version>1.18</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
