--- a/oa-PC/package.json
+++ b/oa-PC/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.11",
+    "js-base64": "^3.7.3",
     "pinia": "^2.0.17",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.37",
