完善登录loading功能，完成客户管理修改功能，完成办公经费修改功能，完成采购付款单修改功能，完成物流付款单修改功能，完成采购单修改功能，完成海运单修改功能

--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -12,11 +12,11 @@ spring:
   application:
     name: oa-server
   #静态资源配置
-#  mvc:
-#    static-path-pattern: /static/**
-#  web:
-#    resources:
-#      static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:static
+  mvc:
+    static-path-pattern: /static/**
+  web:
+    resources:
+      static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:static
   jackson:
     time-zone: GMT+8
 
