--- a/oa-PC/package.json
+++ b/oa-PC/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^3.0.0",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
+    "terser": "^5.16.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.10.1",
     "unplugin-vue-components": "^0.21.2",
