2022/1/1  完成物流单新增和删除 同时前端加上校验  解决了刷新界面登陆人信息改变的bug

--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -22,6 +22,6 @@ spring:
 
 #mybatos-Plus配置
 mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*Mapper.xml
