--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
 #  web:
 #    resources:
 #      static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:static
+  servlet:
+    multipart:
+      max-file-size: 1000MB
+      max-request-size: 1000MB
   jackson:
     time-zone: GMT+8
 
