--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -5,9 +5,11 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://120.77.28.123:3306/oa_project?useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#    url: jdbc:mysql://120.77.28.123:3306/oa_project?useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/oa-project?useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: root
-    password: Zwy172839456,
+#    password: Zwy172839456,
+    password: 123456
   #应用名称
   application:
     name: oa-server
