--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -5,11 +5,11 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://120.77.28.123:3306/oa_project?useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
-    url: jdbc:mysql://localhost:3306/oa-project?useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://43.136.24.231:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#    url: jdbc:mysql://175.178.167.101:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: root
 #    password: Zwy172839456,
-    password: 123456
+    password: Guoleyuan0627!
   #应用名称
   application:
     name: oa-server
