--- a/oa-PC/package.json
+++ b/oa-PC/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons": "0.0.11",
     "af-table-column": "^1.0.3",
     "axios": "^0.27.2",
+    "decimal.js": "^10.4.3",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.11",
     "js-base64": "^3.7.3",
