--- a/oa-server/src/main/resources/application.yml
+++ b/oa-server/src/main/resources/application.yml
@@ -5,8 +5,10 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://43.136.24.231:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
-#    url: jdbc:mysql://175.178.167.101:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#    个人服务器
+#    url: jdbc:mysql://43.136.24.231:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#    公司服务器
+    url: jdbc:mysql://175.178.167.101:3306/oa_project?useSSL=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: root
 #    password: Zwy172839456,
     password: Guoleyuan0627!
